# gydra

./: COPYING  Gydra.pro  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  gydra-service
common/.deps/: pa_ringbuffer.Po
man/: Makefile  Makefile.am  Makefile.in  gydra.1
src/: audio.c  audio.h  devs.c  devs.h  main.c  net.c  net.h  params.c  params.h  protocol.h
src/.deps/: audio.Po  devs.Po  main.Po  net.Po  params.Po
win/portaudio/lib/: portaudio_x86.lib
